operation/kubernetes/service.yml
# service.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: model-service
  labels:
    app: model-service
spec:
  containers:
  - name: model-service
    image: ghcr.io/release-engineering-4/model-service:v0.0.3
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: model-service
spec:
  selector:
    app: model-service
  type:
    ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
