operation/kubernetes/kubernetes.yml
apiVersion: model-service/v1
kind: Deployment
metadata:
  name: model-service
  labels:
    app: model-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-service
  template:
    metadata:
      labels:
        app: model-service
    spec:
      containers:
      - name: model-service-api
        image: ghcr.io/release-engineering-4/model-service:latest
        ports:
        - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: app-serv
spec:
  # type: 
  #   NodePort
  selector:
    app: app
  ports:
    - port: 8080
      targetPort: 8080
___
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app-api
        image: ghcr.io/release-engineering-4/app:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: app-serv
spec:
  # type: 
  #   NodePort
  selector:
    app: app
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  defaultBackend:
    service:
      name: app
      port:
        number: 8080
