operation/kubernetes/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtualservice
spec:
  hosts:
  - "*"  # this needs modified
  gateways:
  - app-gateway  # change this to the current gateway name
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: app
        port:
          number: 8080
    retries:
      attempts: 3
      perTryTimeout: 2s
    mirror:
      host: app
    timeout: 5s
    maxConnections: 100
    fault:
      abort:
        percent: 10  
        httpStatus: 500
